# OPD-Intelligence-500

./: .env.example  .gitignore  .pre-commit-config.yaml  HANDOFF.md  Makefile  README.md  STATE.md  docker-compose.yml  oldreadme-to-be-discarded.md
backend/: Dockerfile  alembic.ini  pyproject.toml  requirements-dev.txt  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 2026_07_15_1857-75dc12335238_initial_schema.py  2026_07_15_2210-8d11748ba95e_add_usage_events_characters_and_price_.py  (+3 more)
backend/app/: __init__.py  audit.py  config.py  db.py  dictation.py  doctor.py  evals.py  formulary.py  kiosk.py  main.py  middleware.py  offline.py  prescription.py  print_sheets.py  queue.py  queue_hub.py  routing.py  rx_sheets.py  seed.py  tiers.py  tree_fixtures.py  worker.py
backend/app/auth/: __init__.py  otp.py  (+4 more)
backend/evals/: routing_eval.json
backend/scripts/: adaptive_report.py  seed_doctor_demo.py  seed_queue_demo.py
backend/tests/: conftest.py  factories.py  test_audit.py  test_auth.py  test_config.py  test_costguard.py  test_crud.py  test_dictation.py  test_doctor.py  test_formulary.py  test_health.py  test_intake.py  test_kiosk.py  test_offline.py  test_prescription.py  test_prompts.py  test_providers_contract.py  test_providers_local_oss.py  test_providers_metering.py  test_providers_registry.py  test_providers_vendors.py  test_queue.py  test_routing.py  test_schema.py  test_seed.py  test_tree_bank.py  test_trees.py
voice-gw/: Dockerfile  pyproject.toml  requirements.txt
voice-gw/gw/: __init__.py  main.py
voice-gw/tests/: test_health.py
(+193 files in other folders)
