[project]
name = "opd-voice-gw"
version = "0.1.0"
description = "OPD Intelligence Platform — telephony audio websocket gateway"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "websockets>=13",
]

[project.optional-dependencies]
dev = ["pytest>=8.3", "ruff>=0.7", "httpx>=0.27"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["gw*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
